--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 10px;
         padding: 20px;
+        max-width: 1200px;
+        margin: auto;
         }
 
         /* Pro široké displeje (nad 1200px) */
