--- a/911mouse.html
+++ b/911mouse.html
@@ -19,22 +19,34 @@
 
     <header>
         <div class="hero-image">
-            <h2>PETROL PALACE</h2>
+            <h2>GT3 TOURING</h2>
         </div>
     </header>
 
     <section class="gallery">
         <div class="image-container">
-            <img src="petrol1.jpg" alt="Petrol 1" onclick="openLightbox('petrol1.jpg')">
+            <img src="911.1.jpg" alt="Petrol 1" onclick="openLightbox('911.1.jpg')">
         </div>
         <div class="image-container">
-            <img src="petrol2.jpg" alt="Petrol 2" onclick="openLightbox('petrol2.jpg')">
+            <img src="911.2.jpg" alt="Petrol 2" onclick="openLightbox('911.2.jpg')">
         </div>
         <div class="image-container">
-            <img src="petrol3.jpg" alt="Petrol 3" onclick="openLightbox('petrol3.jpg')">
+            <img src="911.3.jpg" alt="Petrol 3" onclick="openLightbox('911.3.jpg')">
         </div>
         <div class="image-container">
-            <img src="petrol4.jpg" alt="Petrol 4" onclick="openLightbox('petrol4.jpg')">
+            <img src="911.4.jpg" alt="Petrol 4" onclick="openLightbox('911.4.jpg')">
+        </div>
+        <div class="image-container">
+            <img src="911.5.jpg" alt="Petrol 1" onclick="openLightbox('911.5.jpg')">
+        </div>
+        <div class="image-container">
+            <img src="911.6.jpg" alt="Petrol 2" onclick="openLightbox('911.6.jpg')">
+        </div>
+        <div class="image-container">
+            <img src="911.7.jpg" alt="Petrol 3" onclick="openLightbox('911.7.jpg')">
+        </div>
+        <div class="image-container">
+            <img src="911.8.jpg" alt="Petrol 4" onclick="openLightbox('911.8.jpg')">
         </div>
         </section>
     
